fixed - too large meal img

--- a/src/pages/cook/Cook.css
+++ b/src/pages/cook/Cook.css
@@ -97,4 +97,10 @@
   .cook-icon {
     padding-bottom: 10px
   }
+
+  .cook-icon {
+    width: 80px;
+    margin: 30px 17px
+  }
+
 }
